# smlaunch

./: .anjuta_sym_db.db  .gitignore  Makefile  Makefile.am  README  config.h  config.status  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
src/: Makefile  Makefile.am  client.c  client.c~  client.h  client.h~  log.c~  log.h  log.h~  main.c  main.c~  player.c  player.h  utils.c  utils.c~  utils.h  utils.h~
src/.deps/: client.Po  log.Po  main.Po  utils.Po
